# TrigaLog

./: .gitignore  CMakeLists.txt  README.md
resources/: trigalog.conf  trigalog.service
src/: TrigaLog.cpp  TrigaLog.h  main.cpp
